iml-services/iml-devices/src/snapshots/compute_virtual_device_changes__vd_with_shared_parents_added_to_oss2.snap
---
source: iml-services/iml-devices/src/db.rs
expression: updates
---
{
    (
        DeviceId(
            "c",
        ),
        Fqdn(
            "oss2",
        ),
    ): Remove(
        DeviceHost {
            device_id: DeviceId(
                "c",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: true,
            paths: Paths(
                {},
            ),
            mount_path: MountPath(
                None,
            ),
            fs_type: None,
            fs_label: None,
            fs_uuid: None,
        },
    ),
}
