iml-services/iml-devices/src/snapshots/compute_virtual_device_changes__vd_with_shared_parents_removed_from_oss2_when_parent_disappears.snap
---
source: iml-services/iml-devices/src/db.rs
expression: updates
---
{
    (
        DeviceId(
            "c",
        ),
        Fqdn(
            "oss1",
        ),
    ): Update(
        DeviceHost {
            device_id: DeviceId(
                "c",
            ),
            fqdn: Fqdn(
                "oss1",
            ),
            local: true,
            paths: Paths(
                {
                    "/fake/path/zpool/a",
                },
            ),
            mount_path: MountPath(
                None,
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
}
