iml-services/iml-devices/src/snapshots/compute_virtual_device_changes__vd_with_shared_parents_replaced_on_oss2.snap
---
source: iml-services/iml-devices/src/db.rs
expression: updates
---
{
    (
        DeviceId(
            "d",
        ),
        Fqdn(
            "oss2",
        ),
    ): Add(
        DeviceHost {
            device_id: DeviceId(
                "d",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: true,
            paths: Paths(
                {
                    "/fake/path/zpool/a",
                },
            ),
            mount_path: MountPath(
                None,
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
}
