iml-services/iml-devices/src/snapshots/compute_virtual_device_changes__vd_with_two_levels_of_shared_parents_replaced_on_oss2.snap
---
source: iml-services/iml-devices/src/virtual_device.rs
expression: updates
---
{
    (
        DeviceId(
            "c",
        ),
        Fqdn(
            "oss2",
        ),
    ): Update(
        DeviceHost {
            device_id: DeviceId(
                "c",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: true,
            paths: Paths(
                {
                    "/fake/path/zpool/a",
                },
            ),
            mount_path: MountPath(
                None,
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
    (
        DeviceId(
            "e",
        ),
        Fqdn(
            "oss2",
        ),
    ): Add(
        DeviceHost {
            device_id: DeviceId(
                "e",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: true,
            paths: Paths(
                {
                    "/fake/path/dataset/a",
                },
            ),
            mount_path: MountPath(
                None,
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
}
